fixed overflow issue on the main dashboard layout

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
-html {
-  height: 100%;
-}
+html,
+body,
 :root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  overflow: hidden;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -23,14 +26,6 @@ a {
 }
 a:hover {
   color: #535bf2;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  min-height: 100vh;
-  height: 100%;
-  width: 100%;
 }
 
 h1 {
